<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.AlbumFragment">

    <ProgressBar
        android:id="@+id/loadingDurationsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/capaAlbumId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/sem_capa"
        android:adjustViewBounds="true"
        android:layout_margin="16dp"
        android:elevation="8dp"
        android:transitionName="transform"
        android:contentDescription="@string/capa_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/titleAlbumId"/>

    <TextView
        android:id="@+id/titleAlbumId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_of_album"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/capaAlbumId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/qntMusicsAlbumId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qnt_of_músicas"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/capaAlbumId"
        app:layout_constraintTop_toBottomOf="@id/titleAlbumId"
        app:drawableStartCompat="@drawable/ic_baseline_music_note_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listMusicsAlbumsId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        tools:listitem="@layout/item_list_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capaAlbumId"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/icAddAllId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_all"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="16dp"
        android:padding="5dp"
        android:contentDescription="@string/add_all"
        app:layout_constraintStart_toEndOf="@id/capaAlbumId"
        app:layout_constraintTop_toBottomOf="@id/qntMusicsAlbumId"/>

    <ImageView
        android:id="@+id/icPlayAllId"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:src="@drawable/ic_play_all"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="16dp"
        android:contentDescription="@string/play_all"
        app:layout_constraintStart_toEndOf="@id/icAddAllId"
        app:layout_constraintTop_toTopOf="@id/icAddAllId"
        app:layout_constraintBottom_toBottomOf="@id/icAddAllId"/>

</androidx.constraintlayout.widget.ConstraintLayout>