<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="top"
    app:layout_anchor="@+id/layout_bottom_sheet"
    app:layout_anchorGravity="top"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    tools:showIn="@layout/main_activity"
    android:id="@+id/barExpandColapsHideBottomSheetId">

    <ImageView
        android:id="@+id/button_expand_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bottom_expand"
        android:src="@drawable/ic_expand_up"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <ImageView
        android:id="@+id/btnHideShowVideoId"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        android:contentDescription="@string/hide_show_video"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_video_off"
        app:layout_constraintEnd_toStartOf="@id/buttonClosePlayerId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="8dp"/>

    <ImageView
        android:id="@+id/buttonClosePlayerId"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/oculte_player"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="8dp"/>

    <ImageView
        android:id="@+id/buttonFullscreenId"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/enter_exit_fullscreen"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_fullscreen"
        app:layout_constraintEnd_toStartOf="@id/btnHideShowVideoId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="8dp"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>